fix z-index

--- a/src/sass/layout/_arrow-up.scss
+++ b/src/sass/layout/_arrow-up.scss
@@ -3,6 +3,7 @@
   background-color: $light-text-color;
   right: 30px;
   bottom: 95px;
+  z-index: 1000;
   cursor: pointer;
   width: 50px;
   height: 50px;
